<resources>
    <string name="app_name" translatable="false">Git.</string>
    <string name="about_me">About Me</string>
    <string name="profile_description">
        As known as Nanda, I was born in Magelang on August 21, 1998. I completed my education at Computer Engineering Institut Teknologi Sepuluh Nopember Surabaya.
        I am interested in the field of digital technology, especially in the fields of IT Project Management, User-Oriented Product Development, and Design System Analysis. Currently, I am exploring Mobile Programming with Android Studio. Since November 2021, I am being Application Developer at PT. Multipolar Technology Tbk and be responsible as an Android Mobile Programming with various banking projects such as Mobile Banking, SMS Banking, and Laku Pandai.
    </string>
    <string name="profile_name" translatable="false">Fernanda Daymara Hasna</string>
    <string name="tab" translatable="false">\t\t\t\t\t\t</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="biography">Biography</string>
    <string name="find_me">Find Me</string>
    <string name="credit">Credit</string>
    <string name="made_for">Made in September 2024</string>
    <string name="account_name">Account Name</string>
    <string name="account_profile_picture">Account Profile Picture</string>
    <string name="account_username">Account Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repositories">Repositories</string>
    <string name="open_github_user">Open GitHub User</string>
    <string name="email" translatable="false">Email</string>
    <string name="github" translatable="false">Github</string>
    <string name="whatsapp" translatable="false">Whatsapp</string>
    <string name="dicoding" translatable="false">Dicoding</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="content_by_github">Content by GitHub Docs</string>
    <string name="splash_screen_animation_by_vik4graphic">Splash Screen Animation by vik4graphic</string>
    <string name="icon_by_freepik">Icon by Freepik</string>
    <string name="share_user_account">Share User Account</string>
    <string name="search">Search</string>
    <string name="starred">Starred</string>
    <string name="repository_description">Repository Description</string>
    <string name="repository_name">Repository Name</string>
    <string name="language">Language</string>
    <string name="bio" translatable="false">Bio</string>
    <string name="website" translatable="false">Website</string>
    <string name="watchers">Watchers</string>
    <string name="settings">Settings</string>
    <string name="separator" translatable="false">separator</string>
    <string name="created_by_fernanda_daymara_hasna">Git. by Fernanda Daymara Hasna</string>
    <string name="error_illustration">Error Illustration</string>
    <string name="error_message">Error Message</string>
    <string name="error_not_found">The data you are looking for cannot be found</string>
    <string name="error_lost_connection">Connection error. Please check your network</string>
    <string name="error_server">Something happened with GitHub Server. Service is not available</string>
    <string name="error_others">Ups, something bad happened</string>
    <string name="error_unprocessable">Sorry, something error with our code. Please contact our creator</string>
    <string name="error_forbidden">Your request has exceeded from GitHub rate limit. Please try again later</string>
    <string name="illustration_by_pixel_true">Illustration by Pixel True</string>
    <string name="history">History</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="confirmation">Confirmation</string>
    <string name="warning_delete_history">Are you sure you want to delete all your histories?</string>
    <string name="delete_history">Delete history</string>
    <string name="timestamp">Timestamp</string>
    <string name="undo">Undo</string>
    <string name="success_deleted">%1$s successfully deleted.</string>
    <string name="request_failed">Internal server error. Please try again later.</string>
    <string name="no_internet_connection">Network issue. Check your internet connection and please try again later.</string>
    <string name="server_down">Maintenance server. Please try again later.</string>
    <string name="cannot_connect_to_server">Unable to communicate with server. Please try again later.</string>
    <string name="cannot_access_to_database">Unable to access with database.</string>
</resources>