<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_history"
        app:showAsAction="always"
        android:tooltipText="@string/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_settings"
        app:showAsAction="always"
        android:tooltipText="@drawable/ic_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_about"
        app:showAsAction="always"
        android:tooltipText="@string/about_me"
        android:icon="@drawable/ic_about_me"
        android:title="@string/about_me" />
</menu>