<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    android:paddingHorizontal="@dimen/layout_padding"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/row_account">

    <ImageView
        android:id="@+id/row_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="12dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/account_profile_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:orientation="vertical"
        android:divider="@drawable/divider_view_padding"
        android:showDividers="middle"
        android:layout_toEndOf="@id/row_image"
        android:gravity="center">

        <TextView
            android:id="@+id/row_name"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/account_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_username"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="14sp"
            android:text="@string/account_username" />

        <TextView
            android:id="@+id/row_location"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/location"
            android:drawablePadding="@dimen/subview_padding"
            android:gravity="center_vertical"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/ic_location" />
    </LinearLayout>
</RelativeLayout>