<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp"
    android:paddingHorizontal="@dimen/layout_padding"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/row_user">

    <ImageView
        android:id="@+id/row_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/account_profile_picture"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_username"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:text="@string/account_username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/row_image"
        android:layout_toLeftOf="@id/row_timestamp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/row_timestamp"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:letterSpacing="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:text="@string/timestamp"
        android:maxWidth="80dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
</RelativeLayout>