<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserDetailActivity"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/layout_padding"
        android:showDividers="middle"
        android:divider="@drawable/divider_view_padding">

        <LinearLayout
            android:id="@+id/detail_shareable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/account_profile_picture" />

            <TextView
                android:id="@+id/detail_name"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/account_name"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/subview_padding"/>

            <TextView
                android:id="@+id/detail_username"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1.5dp"
                android:maxLines="1"
                android:text="@string/account_username"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/detail_follows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="3"
                android:showDividers="middle"
                android:divider="@drawable/divider_view_padding"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/detail_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:paddingVertical="16dp">
                    <TextView
                        android:id="@+id/detail_followers_count"
                        style="?attr/textAppearanceHeadline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textSize="18sp"
                        android:padding="4dp"
                        android:maxLines="1"
                        android:textStyle="bold"/>
                    <TextView
                        style="?attr/textAppearanceBody1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/detail_following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:paddingVertical="16dp">
                    <TextView
                        android:id="@+id/detail_following_count"
                        style="?attr/textAppearanceHeadline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textSize="18sp"
                        android:maxLines="1"
                        android:padding="4dp"
                        android:textStyle="bold"/>
                    <TextView
                        style="?attr/textAppearanceBody1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/following"
                        android:maxLines="1"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/detail_company"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/subview_padding"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:paddingEnd="@dimen/subview_padding"
                android:text="@string/company"
                android:maxLines="2"
                app:drawableStartCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/detail_location"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/subview_padding"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:paddingEnd="@dimen/subview_padding"
                android:text="@string/location"
                android:maxLines="2"
                app:drawableLeftCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/detail_repositories"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/subview_padding"
                android:gravity="center"
                android:paddingVertical="4dp"
                android:paddingEnd="@dimen/subview_padding"
                android:text="@string/repositories"
                android:maxLines="1"
                app:drawableLeftCompat="@drawable/ic_repository" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_detail_github"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding"
            android:text="@string/open_github_user" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>